--- a/eam/view/view-ops/src/main/resources/public/business/ops/service_category/service_category_form.html
+++ b/eam/view/view-ops/src/main/resources/public/business/ops/service_category/service_category_form.html
@@ -2,7 +2,7 @@
 /**
  * 服务类型 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2021-09-03 21:36:25
+ * @since 2021-09-05 07:02:02
  */
  -->
  <!DOCTYPE html>
@@ -50,7 +50,7 @@
 
                 
                     <div class="layui-form-item" >
-                        <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('服务分组')}">服务分组</div></div>
+                        <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('服务分组')}">服务分组</div><div class="layui-required">*</div></div>
                         <div class="layui-input-block layui-input-block-c1">
                             <div id="groupId" input-type="select" th:data="${'/service-ops/ops-service-group/query-list'}"></div>
                         </div>
@@ -59,9 +59,9 @@
 
                 
                 <div class="layui-form-item" >
-                    <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('名称')}">名称</div></div>
+                    <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('名称')}">名称</div><div class="layui-required">*</div></div>
                     <div class="layui-input-block layui-input-block-c1">
-                        <input lay-filter="name" id="name" name="name" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('名称') }" type="text" class="layui-input"   />
+                        <input lay-filter="name" id="name" name="name" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('名称') }" type="text" class="layui-input"    lay-verify="|required"   />
                     </div>
                 </div>
 
@@ -170,7 +170,7 @@
 
 <script th:inline="javascript">
     var LAYUI_TABLE_WIDTH_CONFIG = [[${layuiTableWidthConfig}]];
-    var VALIDATE_CONFIG={};
+    var VALIDATE_CONFIG={"groupId":{"labelInForm":"服务分组","inputType":"select_box","required":true},"name":{"labelInForm":"名称","inputType":"text_input","required":true}};
     var AUTH_PREFIX="ops_service_category";
 
 
