--- a/eam/view/view-ops/src/main/resources/public/business/ops/voucher_owner/voucher_owner_list.html
+++ b/eam/view/view-ops/src/main/resources/public/business/ops/voucher_owner/voucher_owner_list.html
@@ -2,7 +2,7 @@
 /**
  * 所属凭证 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2021-09-03 10:34:28
+ * @since 2021-09-04 20:39:23
  */
  -->
  <!DOCTYPE html>
@@ -77,21 +77,20 @@
 <!-- 表格工具栏 -->
 <script type="text/html" id="toolbarTemplate">
     <div class="layui-btn-container">
-        <button th:if="${perm.checkAuth('ops_voucher_owner:create')}" id="add-button" class="layui-btn icon-btn layui-btn-sm" lay-event="create"><i class="layui-icon">&#xe654;</i><span th:text="${lang.translate('新建')}">新建</span></button>
-        <button th:if="${perm.checkAuth('ops_voucher_owner:delete-by-ids')}" id="delete-button" class="layui-btn icon-btn layui-btn-danger layui-btn-sm" lay-event="batch-del"><i class="layui-icon">&#xe67e;</i><span th:text="${lang.translate('删除')}">删除</span></button>
+        <button th:if="${perm.checkAuth('ops_voucher_owner:create')}" id="add-button" class="layui-btn icon-btn layui-btn-sm create-new-button" lay-event="create"><i class="layui-icon">&#xe654;</i><span th:text="${lang.translate('新建')}">新建</span></button>
     </div>
 </script>
 
 <!-- 表格操作列 -->
 <script type="text/html" id="tableOperationTemplate">
 
-    <a th:if="${perm.checkAuth('ops_voucher_owner:view-form')}" class="layui-btn layui-btn-primary layui-btn-xs" lay-event="view" th:text="${lang.translate('查看')}">查看</a>
-    <a th:if="${perm.checkAnyAuth('ops_voucher_owner:update','ops_voucher_owner:save')}" class="layui-btn layui-btn-primary layui-btn-xs" lay-event="edit" th:text="${lang.translate('修改')}">修改</a>
+    <button th:if="${perm.checkAuth('ops_voucher_owner:view-form')}" class="layui-btn layui-btn-primary layui-btn-xs ops-view-button" lay-event="view" th:text="${lang.translate('查看')}">查看</button>
+    <button th:if="${perm.checkAnyAuth('ops_voucher_owner:update','ops_voucher_owner:save')}" class="layui-btn layui-btn-primary layui-btn-xs ops-edit-button" lay-event="edit" th:text="${lang.translate('修改')}">修改</button>
 
 
-    <a th:if="${perm.checkAuth('ops_voucher_owner:delete')}" class="layui-btn layui-btn-xs layui-btn-danger" lay-event="del" th:text="${lang.translate('删除')}">删除</a>
+    <button th:if="${perm.checkAuth('ops_voucher_owner:delete')}" class="layui-btn layui-btn-xs layui-btn-danger ops-delete-button" lay-event="del" th:text="${lang.translate('删除')}">删除</button>
 
-    <a class="layui-btn layui-btn-xs " lay-event="open-host-voucher-window" th:text="${lang.translate('凭证')}">凭证</a>
+    <button class="layui-btn layui-btn-xs " lay-event="open-host-voucher-window" th:text="${lang.translate('凭证')}">凭证</button>
 
 </script>
 
