--- a/eam/view/view-ops/src/main/resources/public/business/ops/voucher_owner/voucher_owner_list.html
+++ b/eam/view/view-ops/src/main/resources/public/business/ops/voucher_owner/voucher_owner_list.html
@@ -2,7 +2,7 @@
 /**
  * 所属凭证 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2021-09-05 20:53:18
+ * @since 2021-09-06 11:16:33
  */
  -->
  <!DOCTYPE html>
@@ -40,12 +40,16 @@
                         <div class="search-label-div" style=""><span th:text="${lang.translate('类别')}" class="search-label categoryCode-label">类别</span><span class="search-colon">:</span></div>
                         <div id="categoryCode" th:data="${'/service-ops/ops-voucher-priv/query-type-list'}" style="width:140px"></div>
                     </div>
-                    <!-- 位置 , position ,typeName=text_input, isHideInSearch=true -->
                     <!-- 用户凭证 , voucherIds ,typeName=select_box, isHideInSearch=true -->
                     <!-- 名称 , name ,typeName=text_input, isHideInSearch=false -->
                     <div class="search-unit">
                         <div class="search-label-div" style=""><span th:text="${lang.translate('名称')}" class="search-label name-label">名称</span><span class="search-colon">:</span></div>
                         <input id="name" class="layui-input search-input" style="width: 140px" type="text" />
+                    </div>
+                    <!-- 位置 , position ,typeName=text_input, isHideInSearch=false -->
+                    <div class="search-unit">
+                        <div class="search-label-div" style=""><span th:text="${lang.translate('位置')}" class="search-label position-label">位置</span><span class="search-colon">:</span></div>
+                        <input id="position" class="layui-input search-input" style="width: 140px" type="text" />
                     </div>
                     <!-- 备注 , notes ,typeName=text_area, isHideInSearch=false -->
                     <div class="search-unit">
